# vortex

./: Anchor.toml  README.md  package.json  pnpm-lock.yaml  tsconfig.json
app/: .env.example  README.md  package.json  pnpm-lock.yaml
app/public/zk/: verification_key.json
app/src/app/: error.tsx  globals.css  layout.tsx  page.tsx
app/src/components/: deposit-panel.tsx  program-address.tsx  secret-field.tsx  solana-provider.tsx  vortex-interface.tsx  wallet-connect-button.tsx  withdraw-panel.tsx
app/src/idl/: vortex.json  vortex.ts
app/src/lib/: vortex-config.ts  vortex-crypto.ts  vortex-note.ts  vortex-program.ts  vortex-proof.ts  vortex-transaction.ts
app/src/types/: snarkjs.d.ts
artifacts/: vortex.r1cs  vortex.sym
artifacts/vortex_js/: vortex.wasm
circuits/: vortex.circom
indexer/: app.ts
programs/vortex/: Cargo.toml
programs/vortex/src/: lib.rs  spl.rs  tree.rs  verifying_key.rs
tests/: proof.ts  vortex.ts
tests/fixtures/: proof.json  public.json
