[package]
name = "vortex"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vortex"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = "0.31.1"
bytemuck = { version = "1.20.0", features = ["derive", "min_const_generics"] }
groth16-solana = "0.2.0"
light-poseidon = "0.4.0"
ark-bn254 = "0.5.0"
ark-ff = "0.5.0"
light-hasher = "6.0.1"
